--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,8 +2,6 @@ name: Zola on GitHub Pages
 
 on:
   push:
-    branches:
-      - main 
   pull_request:
   
 jobs:
@@ -16,7 +14,7 @@ jobs:
       - name: Build only 
         uses: shalzz/zola-deploy-action@v0.19.1
         env:
-          BUILD_DIR: docs
+          BUILD_DIR: .
           BUILD_ONLY: true
           BUILD_FLAGS: --drafts
           # A GitHub token is not necessary when BUILD_ONLY is true
@@ -31,6 +29,6 @@ jobs:
       - name: Build and deploy
         uses: shalzz/zola-deploy-action@v0.19.1
         env:
-          BUILD_DIR: docs
-          PAGES_BRANCH: gh-pages
+          BUILD_DIR: .
+          PAGES_BRANCH: master
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
